- refactor solution and make it testable - add integration tests - add unit tests - support docker container creation in test

--- a/RabbitMQAzureMetricsRunner/appsettings.json
+++ b/RabbitMQAzureMetricsRunner/appsettings.json
@@ -1,6 +1,13 @@
 ﻿{
-    "Hostname": "localhost",
-    "UserName": "guest",
-    "Password": "guest",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "System": "Error",
+            "Microsoft": "Error"
+        }
+    },
+    "RabbitMqHost": "localhost",
+    "RabbitMqUserName": "guest",
+    "RabbitMqPassword": "guest",
     "AppInsightsKey": ""
 }
