refactor solution structure

--- a/Tests/RabbitMQAzureMetrics.Test.IntegrationTests/RabbitMQAzureMetrics.Test.IntegrationTests.csproj
+++ b/Tests/RabbitMQAzureMetrics.Test.IntegrationTests/RabbitMQAzureMetrics.Test.IntegrationTests.csproj
@@ -18,7 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\debugerr.Test.Common\debugerr.Test.Common.csproj" />
     <ProjectReference Include="..\DockerIntegrationTestHelper\DockerIntegrationTestHelper.csproj" />
-    <ProjectReference Include="..\RabbitMQAzureMetrics\RabbitMQAzureMetrics.csproj" />
+    <ProjectReference Include="..\..\RabbitMQAzureMetrics\RabbitMQAzureMetrics.csproj" />
   </ItemGroup>
 
 </Project>
