--- a/Tests/RabbitMQAzureMetrics.Test.UnitTests/RabbitMQAzureMetrics.Test.UnitTests.csproj
+++ b/Tests/RabbitMQAzureMetrics.Test.UnitTests/RabbitMQAzureMetrics.Test.UnitTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RabbitMQAzureMetrics\RabbitMQAzureMetrics.csproj" />
+    <ProjectReference Include="..\..\RabbitMQAzureMetrics\RabbitMQAzureMetrics.csproj" />
   </ItemGroup>
 
   <ItemGroup>
